--- a/modulo 3/exxercicios/ex010/tabela.html
+++ b/modulo 3/exxercicios/ex010/tabela.html
@@ -16,7 +16,7 @@
             font-weight: bold;
         }
         th, td{
-            border: 1px solid black;1
+            border: 1px solid black;
         }
         .cnome{
             background-color: chartreuse;
